prod-croatia-jenkins-main@86d368d2e9c/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: jenkins
    istio-injection: disabled
  name: jenkins
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
