prod-croatia-jenkins-main@86d368d2e9c/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jenkins
  namespace: jenkins
spec:
  host: jenkins.apps.prod-nonpci-shared.nrapp.cloud
  to:
    kind: Service
    name: jenkins
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
